code25_all/scala/4741724.txt
scala> trait A { val v = "a" }
defined trait A

scala> trait B { this :A => ; var v = "" ; this.v = "b" }
<console>:6: error: reassignment to val
       trait B { this :A => ; var v = "" ; this.v = "b" }
                                                  ^

scala> trait C { a :A => ; var v = "" ; this.v = "c" }
<console>:6: error: reassignment to val
       trait C { a :A => ; var v = "" ; this.v = "c" }
                                               ^

scala> trait D { a :A => ; var w = "" ; this.w = a.v }
defined trait D

scala> trait E { this :A => ; var w = "" ; this.w = this.v }
defined trait E

